tests/fixtures/invalid/pow_float_list_list.py
# Cannot call pow() with Float, List[int], List[int]
x = pow(1.0, [1, 2, 3], [1, 2, 3])
